criação da primeira rota e index

--- a/notebook/app/views/home/index.html.erb
+++ b/notebook/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Seja bem-vindo</h1>
+<ul>
+  <li><a href="http://192.168.78.4:3000/kinds">Tipos</a></li>
+  <li><a href="http://192.168.78.4:3000/contacts">Contatos</a></li>
+  <li><a href="http://192.168.78.4:3000/addresses">Endereços</a></li>
+  <li><a href="http://192.168.78.4:3000/phones">Telefones</a></li>
+</ul>
