--- a/notebook/app/views/home/index.html.erb
+++ b/notebook/app/views/home/index.html.erb
@@ -1,7 +1,16 @@
 <h1>Seja bem-vindo</h1>
+<%= mostrar_meu_nome %> <%= somar_dois(45) %>
+
 <ul>
-  <li><a href="http://192.168.78.4:3000/kinds">Tipos</a></li>
-  <li><a href="http://192.168.78.4:3000/contacts">Contatos</a></li>
-  <li><a href="http://192.168.78.4:3000/addresses">Endereços</a></li>
-  <li><a href="http://192.168.78.4:3000/phones">Telefones</a></li>
+<!-- Modo html puro, não usar isto!
+  <li><a href="http://192.168.78.4:3000/kinds">Tipos</a></li>  -->
+
+<!-- Usando helper com link fixo
+  <li><%= link_to "Contatos", "http://192.168.78.4:3000/contacts" %></li> -->
+
+<!-- Usando helper passando a rota, fazer sempre assim! -->
+  <li><%= link_to "Tipos", kinds_path %></li>
+  <li><%= link_to "Contatos", contacts_path %></li>
+  <li><%= link_to "Endereços", addresses_path %></li>
+  <li><%= link_to "Telefones", phones_path %></li> <!-- Usando helper passando a rota, fazer sempre assim! -->
 </ul>
