--- a/notebook/app/views/kinds/index.html.erb
+++ b/notebook/app/views/kinds/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Listando os tipos de contato // <%= @nome_aplicacao %></h1>
+<% a = 1 + 3 %>
+<h1>Listando os tipos de contato // <%= @nome_aplicacao.capitalize %> // <%= a %></h1>
 
 <table>
   <thead>
