--- a/notebook/app/views/addresses/_form.html.erb
+++ b/notebook/app/views/addresses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@address) do |f| %>
+<%= form_for(@address, html: { class: "basic-grey" }) do |f| %>
   <% if @address.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@address.errors.count, "error") %> prohibited this address from being saved:</h2>
@@ -28,6 +28,7 @@
     <%= f.text_field :contact_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Enviar", class: "button" %>
+    <%= link_to 'Back', addresses_path, class: "button" %>
   </div>
 <% end %>
