--- a/notebook/app/views/kinds/_form.html.erb
+++ b/notebook/app/views/kinds/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@kind) do |f| %>
+<%= form_for(@kind, html: { class: "basic-grey" }) do |f| %>
   <% if @kind.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@kind.errors.count, "error") %> prohibited this kind from being saved:</h2>
@@ -16,6 +16,7 @@
     <%= f.text_field :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Enviar", class: "button" %>
+    <%= link_to 'Back', kinds_path, class: "button" %>
   </div>
 <% end %>
