--- a/notebook/app/views/phones/_form.html.erb
+++ b/notebook/app/views/phones/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@phone) do |f| %>
+<%= form_for(@phone, html: { class: "basic-grey" }) do |f| %>
   <% if @phone.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@phone.errors.count, "error") %> prohibited this phone from being saved:</h2>
@@ -20,6 +20,7 @@
     <%= f.text_field :contact_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Enviar", class: "button" %>
+    <%= link_to 'Back', phones_path, class: "button" %>
   </div>
 <% end %>
