--- a/notebook/app/views/contacts/_form.html.erb
+++ b/notebook/app/views/contacts/_form.html.erb
@@ -17,14 +17,32 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+
   <div class="field">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+
   <div class="field">
     <%= f.label :kind_id %><br>
     <%= collection_select(:contact, :kind_id, @kind_options_for_select, :id, :description) %>
   </div>
+
+  <%= f.fields_for :address do |address_fields| %>
+    <div class="field">
+      <%= f.label :street %><br>
+      <%= address_fields.text_field :street %>
+    </div>
+    <div class="field">
+      <%= f.label :city %><br>
+      <%= address_fields.text_field :city %>
+    </div>
+    <div class="field">
+      <%= f.label :state %><br>
+      <%= address_fields.text_field :state %>
+    </div>
+  <% end %>
+
   <div class="field">
     <%= f.label :rmk %><br>
     <%= f.text_area :rmk %>
