--- a/notebook/app/views/home/index.html.erb
+++ b/notebook/app/views/home/index.html.erb
@@ -1,4 +1,10 @@
 <h1>Seja bem-vindo</h1>
+<h2><%= t 'hello' %></h2>
+<h2><%= t 'hi' %></h2>
+
+<h2><%= l Date.today %></h2>
+
+
 <%= mostrar_meu_nome %> <%= somar_dois(45) %>
 
 <ul>
